--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
   <body>
     <h1>WYSIWYG Editor</h1>
     <iframe src="" name="editorframe" id="editorframe"></iframe>
-    <button type="button" onclick="insert()">Insert</button>
+    <button type="button" onclick="insertsomething()">Insert</button>
     <input type="file" id="imagefile" value="" onchange="insertimage(this)">
     <script src="./js/index.js" charset="utf-8"></script>
-    
+
   </body>
 </html>
