remove image in one backspace

--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
   <body>
     <h1>WYSIWYG Editor</h1>
     <iframe src="" name="editorframe" id="editorframe"></iframe>
-    <button type="button" onclick="insertsomething()">Insert</button>
-    <input type="file" id="imagefile" value="" onchange="insertimage(this)">
+    <button type="button" onclick="insertimage()">Insert</button>
     <script src="./js/index.js" charset="utf-8"></script>
 
   </body>
