--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Editor</title>
-    <link rel="stylesheet" href="./css/index.css">
+    <link rel="stylesheet" href="index.css">
   </head>
   <body>
     <h1>WYSIWYG Editor</h1>
     <iframe src="" name="editorframe" id="editorframe"></iframe>
     <button type="button" onclick="insertimage()">Insert</button>
-    <script src="./js/index.js" charset="utf-8"></script>
+    <script src="index.js" charset="utf-8"></script>
 
   </body>
 </html>
