--- a/index.html
+++ b/index.html
@@ -2,12 +2,13 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <title></title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Editor</title>
     <link rel="stylesheet" href="index.css">
   </head>
   <body>
     <iframe src="" name="editorframe" id="editorframe"></iframe>
+    <button type="button" onclick="insertimage();">Insert</button>
     <script src="index.js" charset="utf-8"></script>
   </body>
 </html>
