--- a/index.html
+++ b/index.html
@@ -12,6 +12,15 @@
     <button onclick="setPadding(10, 10, 10, 10)">Set Padding</button>
     <button id="gethtmlbutton">GET HTML</button>
     <button id="sethtmlbutton">SET HTML</button>
+    <button onclick="execCmd('bold')">B</button>
+    <button onclick="execCmd('italic')">I</button>
+    <button onclick="execCmd('underline')">U</button>
+    <button onclick="execCmd('justifyLeft')">Align Left</button>
+    <button onclick="execCmd('justifyCenter')">Align Center</button>
+    <button onclick="execCmd('justifyRight')">Align Right</button>
+    <button onclick="execCmd('justifyFull')">Justify</button>
+    <button onclick="execCmd('insertOrderedList')">OL</button>
+    <button onclick="execCmd('insertUnorderedList')">UL</button>
     <p>For set HTML i have passed dummy string for now</p>
     <div id="resultdiv">
 
