undo redo and some minor changes

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <button onclick="execCmd('justifyFull')">Justify</button>
     <button onclick="execCmd('insertOrderedList')">OL</button>
     <button onclick="execCmd('insertUnorderedList')">UL</button>
+    <button onclick="execCmdWithArg('formatBlock', 'H3')">Font H3</button>
     <p>For set HTML i have passed dummy string for now</p>
     <div id="resultdiv">
 
