image center crop

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <body>
     <iframe src="" name="editorframe" id="editorframe"></iframe>
     <button onclick="insertImage('darkback.jpg');">Insert</button>
+    <button onclick="insertImage('lake.jpg');">Insert</button>
     <button onclick="setPadding(10, 10, 10, 10)">Set Padding</button>
     <button id="gethtmlbutton">GET HTML</button>
     <button id="sethtmlbutton">SET HTML</button>
