copy paste bug fixed

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <iframe src="" name="editorframe" id="editorframe"></iframe>
+    <button type="button" onclick="insertImage('lake.jpg');">Upload Image</button>
     <script src="index.js" charset="utf-8"></script>
   </body>
 </html>
